## Process this file with automake to produce Makefile.in

#AUTOMAKE_OPTIONS        =  foreign

#ACLOCAL_M4 = $(top_srcdir)/config/aclocal.m4

examplesdir = $(pkgdatadir)/examples/rrdcached
examples_SCRIPTS = rrdcached-size.pl
examples_DATA = RRDCached.pm

EXTRA_DIST = $(examples_DATA) $(examples_SCRIPTS)
