EXTRA_DIST= COPYRIGHT.txt Courier-Bold.afm Courier-BoldOblique.afm \
	Courier-Oblique.afm Courier.afm Helvetica-Bold.afm \
	Helvetica-BoldOblique.afm Helvetica-Oblique.afm \
	Helvetica.afm Symbol.afm Times-Bold.afm Times-BoldItalic.afm \
	Times-Italic.afm Times-Roman.afm ZapfDingbats.afm \
	compile_afm.pl glyphlist.txt test-afm.c
