## Process this file with automake to produce Makefile.in

#AUTOMAKE_OPTIONS        = foreign

#where we keep local rules for automake
#ACLOCAL_M4 = $(top_srcdir)/config/aclocal.m4

# make sure autoheader finds aclocal

AUTOHEADER = @AUTOHEADER@ --localdir=config

#additional files to distribute
EXTRA_DIST =	aclocal.m4	libtool/libtool.m4	config.guess	\
		config.sub	install-sh		ltconfig	\
		ltmain.sh	missing			mkinstalldirs
