CGILIB=@CGI_LIB_DIR@
ZLIB=@ZLIB_LIB_DIR@
LIBPNG=@PNG_LIB_DIR@
LIBART=@ART_LIB_DIR@
FREETYPE=@FREETYPE_LIB_DIR@

if !USE_INSTALLED_libcgi
BUILD_CGI=$(CGILIB)
endif
if !USE_INSTALLED_libz
BUILD_ZLIB=$(ZLIB)
endif
if !USE_INSTALLED_libpng
BUILD_LIBPNG=$(LIBPNG)
endif
if !USE_INSTALLED_libart_lgpl
BUILD_LIBART=$(LIBART)
endif
if !USE_INSTALLED_libfreetype
BUILD_FREETYPE=$(FREETYPE)
endif

SUBDIRS=$(BUILD_CGI) $(BUILD_ZLIB) $(BUILD_LIBPNG) $(BUILD_LIBART) $(BUILD_FREETYPE) afm

DIST_SUBDIRS=$(CGILIB) $(ZLIB) $(LIBPNG) $(LIBART) $(FREETYPE) afm
