## Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES  = librrd_gd.la

librrd_gd_la_SOURCES = \
	gd.c		gdfontg.c	gdfontl.c	gdfontmb.c	\
	gdfonts.c	gdfontt.c	gdlucidab10.c	gdlucidab12.c	\
	gdlucidab14.c	gdlucidan10.c	gdlucidan12.c	gdlucidan14.c \
	gd.h           gdfontmb.h     gdlucidab10.h  gdlucidan10.h \
	gdfontg.h      gdfonts.h      gdlucidab12.h  gdlucidan12.h \
	gdfontl.h      gdfontt.h      gdlucidab14.h  gdlucidan14.h


EXTRA_DIST= README.rrdtool demoin.gif gd.dsp gd.dsw index.html readme.txt \
	webgif.c mtables.c mathmake.c giftogd.c
