## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
 freetype.h    ftchapters.h  ftimage.h     ftmm.h        ftoutln.h     ftsnames.h    fttrigon.h    ttnameid.h    \
 ftbbox.h      fterrors.h    ftlist.h      ftmoderr.h    ftrender.h    ftsynth.h     fttypes.h     tttables.h    \
 ftcache.h     ftglyph.h     ftmac.h       ftmodule.h    ftsizes.h     ftsystem.h    t1tables.h    tttags.h      
